--- a/css/styles.css
+++ b/css/styles.css
@@ -9,11 +9,11 @@
     font-family: 'Pixeloid';
 }
 body#homeBody{
-    overflow: hidden;
+    overflow-x: hidden;
     cursor: none;
 }
 #home-first-floor{
-    background-image: url(../assets/images/VersionesMiniEsc\ 2.png);
+    background-image: url(../assets/images/EscenarioCafe.png);
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -79,14 +79,301 @@ body#homeBody{
     bottom: 0;
     transform: translateY(calc(100% + 4px));
 }
+.aboutMeFirstFloor{
+    background-color: rgb(192, 168, 154);
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    position: relative;
+}
+.ceiling{
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+}
+.ceiling img{
+    width: 100%;
+    height: 150px;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.ceiling h2{
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    color: white;
+    font-size: 24px;
+    transform: translateX(-50%);
+}
+.floor{
+    width: 100%;
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+.floor img{
+    width: 100%;
+    height: 150px;
+}
+.infoContainer{
+    background-color: rgb(115, 75, 115);
+    width: 600px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border: solid 8px black;
+    transform: translateX(-50%) translateY(-50%);
+}
+.infoContainer img{
+    width: 100%;
+    position: absolute;
+    transform: translateY(-50%);
+}
+.infoContent{
+    width: 100%;
+    height: 400px;
+    padding: 80px 80px 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-y: scroll;
+}
+.infoContent::-webkit-scrollbar {
+  width: 10px;
+}
+.infoContent::-webkit-scrollbar-track {
+  background: rgb(79, 55, 79);
+}
+.infoContent::-webkit-scrollbar-thumb {
+  background: rgb(100, 29, 73);
+}
+.infoContent::-webkit-scrollbar-thumb:hover {
+    background: rgb(163, 53, 121);
+}
+.infoContent h2{
+    margin-bottom: 20px;
+    color: white;
+    font-size: 32px;
+}
+.infoContent p{
+    margin-bottom: 30px;
+    color: white;
+    text-align: center;
+}
+.infoContent .social{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.infoContent .social img{
+    width: 150px;
+    height: 150px;
+    position: static;
+    border: solid 4px black;
+    border-radius: 50%;
+    object-fit: cover;
+    transform: translateY(0);
+}
+.infoContent .social ul{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    list-style: none;
+}
+.infoContent .social .socialButton{
+    background-color: #000000;
+    width: 200px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    color: #106A98;
+    font-size: 20px;
+    border: solid 6px #106A98;
+    border-radius: 12px;
+    text-decoration: none;
+    cursor: none;
+    opacity: .7;
+    transform: .4s;
+    filter: sepia(1);
+}
+.infoContent .social .socialButton:hover{
+    filter: sepia(0);
+    opacity: 1;
+    transform: .4s;
+}
+.infoContent .social .socialButton.linkedin:hover{
+    color: #2e64bb;
+    border: solid 6px #2e64bb;
+}
+.infoContent .social .socialButton.email:hover{
+    color: #d0ab65;
+    border: solid 6px #d0ab65;
+}
+.infoContent .social .socialButton.whatsapp:hover{
+    color: #79d050;
+    border: solid 6px #79d050;
+}
+.infoContent .social .socialButton img{
+    border: none;
+    width: 24px;
+    height: auto;
+    border-radius: 0;
+}
+.aboutMeBasemenet{
+    background-color: rgb(72, 33, 23);
+    width: 100%;
+    height: calc(3200px + 50px);
+    position: relative;
+}
+.pipelines{
+    display: grid;
+    grid-template-rows: repeat(32, 100px);
+    grid-template-columns: repeat(5, 100px);
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.pipelines div{
+    display: flex;
+    position: relative;
+}
+.pipelines div:nth-child(1){grid-row: 1;grid-column: 3;}
+.pipelines div:nth-child(2){grid-row: 2;grid-column: 1;}
+.pipelines div:nth-child(3){grid-row: 2;grid-column: 2;}
+.pipelines div:nth-child(4){grid-row: 2;grid-column: 3;}
+.pipelines div:nth-child(5){grid-row: 3;grid-column: 1;}
+.pipelines div:nth-child(6){grid-row: 3;grid-column: 3;}
+.pipelines div:nth-child(7){grid-row: 4;grid-column: 1;}
+.pipelines div:nth-child(8){grid-row: 4;grid-column: 3;}
+.pipelines div:nth-child(9){grid-row: 4;grid-column: 4;}
+.pipelines div:nth-child(10){grid-row: 4;grid-column: 5;}
+.pipelines div:nth-child(11){grid-row: 5;grid-column: 1;}
+.pipelines div:nth-child(12){grid-row: 5;grid-column: 3;}
+.pipelines div:nth-child(13){grid-row: 5;grid-column: 5;}
+.pipelines div:nth-child(14){grid-row: 6;grid-column: 1;}
+.pipelines div:nth-child(15){grid-row: 6;grid-column: 3;}
+.pipelines div:nth-child(16){grid-row: 6;grid-column: 5;}
+.pipelines div:nth-child(17){grid-row: 7;grid-column: 1;}
+.pipelines div:nth-child(18){grid-row: 7;grid-column: 3;}
+.pipelines div:nth-child(19){grid-row: 8;grid-column: 1;}
+.pipelines div:nth-child(20){grid-row: 8;grid-column: 3;}
+.pipelines div:nth-child(21){grid-row: 8;grid-column: 4;}
+.pipelines div:nth-child(22){grid-row: 8;grid-column: 5;}
+.pipelines div:nth-child(23){grid-row: 9;grid-column: 1;}
+.pipelines div:nth-child(24){grid-row: 9;grid-column: 3;}
+.pipelines div:nth-child(25){grid-row: 10;grid-column: 1;}
+.pipelines div:nth-child(26){grid-row: 10;grid-column: 3;}
+.pipelines div:nth-child(27){grid-row: 10;grid-column: 4;}
+.pipelines div:nth-child(28){grid-row: 10;grid-column: 5;}
+.pipelines div:nth-child(29){grid-row: 11;grid-column: 1;}
+.pipelines div:nth-child(30){grid-row: 11;grid-column: 3;}
+.pipelines div:nth-child(31){grid-row: 11;grid-column: 5;}
+.pipelines div:nth-child(32){grid-row: 12;grid-column: 1;}
+.pipelines div:nth-child(33){grid-row: 12;grid-column: 3;}
+.pipelines div:nth-child(34){grid-row: 12;grid-column: 5;}
+.pipelines div:nth-child(35){grid-row: 13;grid-column: 1;}
+.pipelines div:nth-child(36){grid-row: 13;grid-column: 3;}
+.pipelines div:nth-child(37){grid-row: 14;grid-column: 1;}
+.pipelines div:nth-child(38){grid-row: 15;grid-column: 1}
+.pipelines div:nth-child(39){grid-row: 15;grid-column: 2;}
+.pipelines div:nth-child(40){grid-row: 15;grid-column: 3;}
+.pipelines div:nth-child(41){grid-row: 15;grid-column: 4;}
+.pipelines div:nth-child(42){grid-row: 15;grid-column: 5;}
+.pipelines div:nth-child(43){grid-row: 16;grid-column: 3;}
+.pipelines div:nth-child(44){grid-row: 16;grid-column: 5;}
+.pipelines div:nth-child(45){grid-row: 17;grid-column: 2;}
+.pipelines div:nth-child(46){grid-row: 17;grid-column: 3;}
+.pipelines div:nth-child(47){grid-row: 17;grid-column: 4;}
+.pipelines div:nth-child(48){grid-row: 17;grid-column: 5;}
+.pipelines div:nth-child(49){grid-row: 18;grid-column: 2;}
+.pipelines div:nth-child(50){grid-row: 18;grid-column: 4;}
+.pipelines div:nth-child(51){grid-row: 18;grid-column: 5;}
+.pipelines div:nth-child(52){grid-row: 19;grid-column: 2;}
+.pipelines div:nth-child(53){grid-row: 19;grid-column: 4;}
+.pipelines div:nth-child(54){grid-row: 19;grid-column: 5;}
+.pipelines div:nth-child(55){grid-row: 20;grid-column: 5;}
+.pipelines div:nth-child(56){grid-row: 21;grid-column: 3;}
+.pipelines div:nth-child(57){grid-row: 21;grid-column: 4;}
+.pipelines div:nth-child(58){grid-row: 21;grid-column: 5;}
+.pipelines div:nth-child(59){grid-row: 22;grid-column: 3;}
+.pipelines div:nth-child(60){grid-row: 23;grid-column: 3;}
+.pipelines div:nth-child(61){grid-row: 23;grid-column: 4;}
+.pipelines div:nth-child(62){grid-row: 23;grid-column: 5;}
+.pipelines div:nth-child(63){grid-row: 24;grid-column: 3;}
+.pipelines div:nth-child(64){grid-row: 25;grid-column: 1;}
+.pipelines div:nth-child(65){grid-row: 25;grid-column: 2;}
+.pipelines div:nth-child(66){grid-row: 25;grid-column: 3;}
+.pipelines div:nth-child(67){grid-row: 25;grid-column: 4;}
+.pipelines div:nth-child(68){grid-row: 25;grid-column: 5;}
+.pipelines div:nth-child(69){grid-row: 26;grid-column: 1;}
+.pipelines div:nth-child(70){grid-row: 26;grid-column: 3;}
+.pipelines div:nth-child(71){grid-row: 27;grid-column: 1;}
+.pipelines div:nth-child(72){grid-row: 27;grid-column: 3;}
+.pipelines div:nth-child(73){grid-row: 28;grid-column: 2;}
+.pipelines div:nth-child(74){grid-row: 28;grid-column: 3;}
+.pipelines div:nth-child(75){grid-row: 28;grid-column: 4;}
+.pipelines div:nth-child(76){grid-row: 29;grid-column: 2;}
+.pipelines div:nth-child(77){grid-row: 29;grid-column: 4;}
+.pipelines div:nth-child(78){grid-row: 30;grid-column: 2;}
+.pipelines div:nth-child(79){grid-row: 30;grid-column: 4;}
+.pipelines div:nth-child(80){grid-row: 30;grid-column: 5;}
+.pipelines div:nth-child(81){grid-row: 31;grid-column: 5;}
+.pipelines div:nth-child(82){grid-row: 32;grid-column: 5;}
+.pipelines div img{
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.pipelines div span{
+    background-color: #d6c9ae;
+    width: 100px;
+    height: 0;
+    display: grid;
+    place-items: center;
+    position: absolute;
+    top: 0px;
+    left: 50%;
+    color: rgb(129, 157, 191);
+    font-size: 0;
+    border: solid 0px #d59616;
+    border-radius: 12px;
+    transform: translateX(-50%) translateY(-50%);
+    transition: .5s;
+}
+.pipelines div:hover span{
+    width: 200px;
+    height: 60px;
+    top: -50px;
+    left: 50%;
+    font-size: 16px;
+    border: solid 4px black;
+    transition: .5s;
+}
+#audioButton, .return{
+    z-index: 3;
+}
 #audioButton{
     background: none;
-    position: absolute;
-    top: 30px;
+    position: fixed;
+    top: 20px;
     right: 30px;
     border: none;
 }
-#audioButton img{
+.return{
+    position: fixed;
+    top: 20px;
+    left: 30px;
+    border: none;
+}
+#audioButton img, .return img{
     width: 80px;
     height: 80px;
 }
@@ -94,6 +381,7 @@ body#homeBody{
     width: 90px;
     position: absolute;
     transform: translateX(-50%) translateY(-100%);
+    z-index: 4;
 }
 @media (max-width:1000px) {
     .linkButton:nth-child(3){
@@ -103,6 +391,35 @@ body#homeBody{
     .linkButton:nth-child(4){
         top: 50%;
         left: 48%;
+    }
+    .infoContent .social{
+        flex-direction: column;
+        align-items: center;
+    }
+    .infoContent .social img{
+        width: 200px;
+        height: 200px;
+    }
+    .infoContent .social .socialButton{
+        width: 300px;
+        height: 70px;
+        gap: 16px;
+        font-size: 28px;
+    }
+    .infoContent .social .socialButton img{
+        width: 36px;
+    }
+    #audioButton{
+        top: 10px;
+        right: 20px;
+    }
+    .return{
+        top: 10px;
+        left: 20px;
+    }
+    #audioButton img, .return img{
+        width: 60px;
+        height: 60px;
     }
 }
 @media (max-width:600px) {
@@ -133,5 +450,23 @@ body#homeBody{
         100%{
             transform: translateX(-50%) translateY(0);
         }
+    }
+    .infoContainer{
+        width: 80%;
+    }
+    .infoContent{
+        height: 550px;
+        margin-left: 10px;
+        padding: 80px 10% 200px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        overflow-y: scroll;
+        overflow-x: hidden;
+    }
+    .pipelines{
+        display: grid;
+        grid-template-rows: repeat(10, 100px);
+        grid-template-columns: repeat(3, 100px);
     }
 }
